# pragma-cli

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  Taskfile.yaml  pyproject.toml
.claude/: settings.json
.github/workflows/: publish.yaml  update-sdk.yaml
src/pragma_cli/: bootstrap_errors.py  config.py  helpers.py  main.py  plugins.py  project_context.py
src/pragma_cli/commands/: auth.py  completions.py  config.py  organizations.py  projects.py  providers.py  resources.py  settings.py  store.py  tasks.py
tests/: __init__.py  conftest.py  test_auth.py  test_completions.py  test_config.py  test_dead_letter.py  test_helpers.py  test_main.py  test_organizations.py  test_plugin_discovery.py  test_provider.py  test_providers.py  test_resources.py  test_store.py
