[project]
name = "pragmatiks-cli"
version = "2.1.0"
description = "Command-line interface for Pragmatiks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15.3",
    "pragmatiks-sdk>=3.0.0",
    "pyyaml>=6.0.3",
    "copier>=9.0.0",
    "rich>=13.9.0",
    "jsonschema>=4.26.0",
]

[project.scripts]
pragma = "pragma_cli.main:app"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
preview = true
select = [
    "E",       # pycodestyle errors
    "W",       # pycodestyle warnings
    "F",       # Pyflakes
    "I",       # isort
    "PLC0415", # import-outside-top-level
    "UP",      # Pyupgrade
    "D",       # pydocstyle - docstring conventions
    "DOC",     # Ruff's docstring checks (parameters match signature)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["pragma_cli"]

[tool.ruff.format]
preview = true

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
exclude = ["**/__pycache__/**"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "2.1.0"
version_files = ["pyproject.toml:^version"]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"

[dependency-groups]
dev = [
    "commitizen>=4.11.0",
    "pre-commit>=4.0.0",
    "ruff>=0.11.0",
]

[tool.uv.build-backend]
module-name = "pragma_cli"

[build-system]
requires = ["uv_build>=0.9.8"]
build-backend = "uv_build"
